# rename-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: AI_CONTEXT.md  Plano-de-Férias-(remodelado)—Julho-2026.md  Plano_Ferias_Backend_2026.md
docs/etapas/: etapa_1_caminhos_e_buscas.md  etapa_2_estruturas_e_poo.md  etapa_3_logica_de_renomeacao.md  etapa_4_interface_cli.md  etapa_5_historico_e_desfazer.md
memory/: profile.json
rename/: pyvenv.cfg
src/: cli.py  main.py
src/commands/: rename.py  undo.py
src/core/: exceptions.py  models.py
src/services/: history_service.py  preview_service.py  renamer.py  scanner.py
tests/: path2.py  path_example.py  run.py  scanner_test.py  test_path.py
