[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rename-cli"
version = "0.1.0"
description = "Renomeador de arquivos em lote via linha de comando"
requires-python = ">=3.10"

[project.scripts]
rename = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]